# readability

./: Cargo.toml  README.md
src/: error.rs  extractor.rs  scorer.rs
