[package]
name = "readability-liveboat"
version = "0.3.4"
edition = "2015"
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "Konrad Wasowicz <exaroth@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/exaroth/readability.git"
description = "Port of arc90's readability project to rust, updated for use with liveboat"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.9"
url = "2.4"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
lazy_static = "1.4"

[dependencies.reqwest]
version = "0.11"
optional = true
features = ["blocking", "rustls-tls"]
default-features = false

[features]
default = ["reqwest"]
